#1627 Helium sense WF
- Handlers predefinits

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -984,6 +984,17 @@ accio.tipus.enum.HANDLER=Handler
 accio.tipus.enum.HANDLER_PREDEFINIT=Handler predefinit
 accio.tipus.enum.SCRIPT=Script
 
+handler.agrupacio.enum.GENERICS=Genèrics
+handler.agrupacio.enum.EXPEDIENTS=Gestió d'expedients
+handler.agrupacio.enum.DOCUMENTS=Documents
+handler.agrupacio.enum.ALERTES=Gestió d'alertes
+handler.agrupacio.enum.TERMINIS=Gestió de terminis
+handler.agrupacio.enum.REGISTRE=Registre
+handler.agrupacio.enum.SISTRA=SISTRA
+handler.agrupacio.enum.INTERESSATS=Interessats
+handler.agrupacio.enum.NOTIB=NOTIB
+handler.agrupacio.enum.PINBAL=PINBAL
+
 # Literals comuns per a la importació i exportació de tipus d'expedients i definicions de processos
 exportar.validacio=Errors de validació
 exportar.validacio.expedientTipusIdNull=El tipus d'expedient a exportar no pot estar buit
@@ -1341,16 +1352,18 @@ expedient.tipus.accio.form.titol.visualitzar=Visualitzar l'acció
 expedient.tipus.accio.form.accio.codi=Codi
 expedient.tipus.accio.form.accio.nom=Nom
 expedient.tipus.accio.form.accio.tipus=Tipus
+expedient.tipus.accio.form.accio.publica=Pública
+expedient.tipus.accio.form.accio.oculta=Oculta
+expedient.tipus.accio.form.accio.rols=Restringir als rols
 expedient.tipus.accio.form.accio.descripcio=Descripció
 expedient.tipus.accio.form.accio.defprocJbpmKey=Definició de procés
 expedient.tipus.accio.form.accio.defprocJbpmKey.placeholder=Seleccioni la definició de procés que conté el handler
 expedient.tipus.accio.form.accio.jbpmAction=Handler
 expedient.tipus.accio.form.accio.script=Script
-expedient.tipus.accio.form.legend.visibilitat=Visibilitat
-expedient.tipus.accio.form.accio.publica=Pública
-expedient.tipus.accio.form.accio.oculta=Oculta
-expedient.tipus.accio.form.accio.rols=Restringir als rols
-
+expedient.tipus.accio.form.legend.handler.predefinit=Mapejos del handler
+expedient.tipus.accio.form.accio.handlerPredefinit=Handler predefinit
+expedient.tipus.accio.form.accio.handlerPredefinit.placeholder=Seleccioni el handler predefinit
+expedient.tipus.accio.form.accio.handlerPredefinit.sense.parametres=El handler predefinit seleccionat no té paràmetres
 expedient.tipus.accio.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.accio.validacio.tipus.null=S'ha d'informar el tipus d'acció
 
@@ -1359,6 +1372,8 @@ expedient.tipus.accio.controller.modificat=La acció s'ha modificat correctament
 expedient.tipus.accio.controller.eliminat=La acció s'ha elimitat correctament
 expedient.tipus.accio.validacio = Errors de validació
 expedient.tipus.accio.validacio.accio.no.existeix=L''acció no existeix a la darrera versió de la definició de procés
+expedient.tipus.accio.validacio.predefinit.classe.no.existeix=La classe {0} no es troba entre els handlers predefinits
+expedient.tipus.accio.validacio.predefinit.parametres.obligatoris=El handler té els següents paràmetres obligatoris que no han estat informats: {0}
 
 ## MANTENIMENT D'ENUMERACIONS ##
 enumeracio.llistat.titol=Enumeracions
