--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1550,6 +1550,8 @@ expedient.tipus.estat.importar.controller.validacio.multipartFile.buit=L'arxiu a
 expedient.tipus.estat.importar.controller.success=Importació finalitzada amb {0} insercions i {1} actualitzacions
 expedient.tipus.estat.importar.controller.error=Error durant la importació de dades: {0}
 expedient.tipus.estat.importar.controller.error.codi=No s''ha pogut importar l''estat "{0}". El codi no pot començar per majúscula i minúscula ni contenir espais o punts.
+expedient.tipus.estat.importar.controller.avis.estat.accio.entrada=No s''ha trobat l''acció \"{0} - {1\}" per l''entrada de l''estat \"{0} - {1}\"
+expedient.tipus.estat.importar.controller.avis.estat.accio.sortida=No s''ha trobat l''acció \"{0} - {1\}" per la sortida de l''estat \"{0} - {1}\"
 
 expedient.tipus.estat.exportar.controller.success=Exportació finalitzada correctament
 expedient.tipus.estat.exportar.controller.error=Error durant la exportació de dades: {0}
