--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -738,6 +738,7 @@ expedient.anotacio.llistat.annexos.esborranys=L'anotació conté annexos en estat 
 expedient.anotacio.llistat.processar.mapeig=Processar mapeig
 expedient.anotacio.llistat.processar.mapeig.ok=L'anotació s'ha reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.ko=No s'ha pogut reprocessar l'anotació.
+expedient.anotacio.llistat.processar.mapeig.permisos=L'usuari ha de tenir el permís de relacionar per reprocessar el mapeig a l'anotació.
 
 expedient.lucene.titol=Dades indexades a lucene per l''expedient {0}
 expedient.lucene.reindexacio.asincrona.data=L''expedient està pendent de reindexar amb data {0,date,dd/MM/yyyy HH:mm:ss}
