#1638_Poder descarregar les versions anteriors d'un document guardat a l'Arxiu

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -543,6 +543,7 @@ expedient.metadades.nti.camp.eni.classificacio=Classificació
 expedient.metadades.nti.camp.eni.estat=Estat
 expedient.metadades.nti.camp.eni.organs=Òrgans
 expedient.metadades.nti.camp.eni.interessats=Interessats
+expedient.metadades.nti.camp.eni.versions=Versions
 expedient.metadades.nti.camp.eni.doc.orig.id=Document orígen id.
 expedient.metadades.nti.camp.eni.firma.tipus=Tipus de firma
 expedient.metadades.nti.camp.eni.firma.csv=CSV
