#1646 Error amb els tipus NTI de documents

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2135,6 +2135,27 @@ anotacio.annex.detalls.camp.ntiTipusDocument.COMUNICACIO_CIUTADA=Comunicació ciu
 anotacio.annex.detalls.camp.ntiTipusDocument.FACTURA=Factura
 anotacio.annex.detalls.camp.ntiTipusDocument.ALTRES_INCAUTATS=Altres confiscats
 anotacio.annex.detalls.camp.ntiTipusDocument.ALTRES=Altres tipus de documents
+anotacio.annex.detalls.camp.ntiTipusDocument.LLEI=Llei
+anotacio.annex.detalls.camp.ntiTipusDocument.MOCIO=Moció
+anotacio.annex.detalls.camp.ntiTipusDocument.INSTRUCCIO=Instrucció
+anotacio.annex.detalls.camp.ntiTipusDocument.CONVOCATORIA=Convocatòria
+anotacio.annex.detalls.camp.ntiTipusDocument.ORDRE_DIA=Ordre del dia
+anotacio.annex.detalls.camp.ntiTipusDocument.INFORME_PONENCIA=Informe de ponència
+anotacio.annex.detalls.camp.ntiTipusDocument.DICTAMEN_COMISSIO=Dictamen de comissió
+anotacio.annex.detalls.camp.ntiTipusDocument.INICIATIVA_LEGISLATIVA=Iniciativa legislativa
+anotacio.annex.detalls.camp.ntiTipusDocument.PREGUNTA=Pregunta
+anotacio.annex.detalls.camp.ntiTipusDocument.INTERPELACIO=Interpel·lació
+anotacio.annex.detalls.camp.ntiTipusDocument.RESPOSTA=Resposta
+anotacio.annex.detalls.camp.ntiTipusDocument.PROPOSICIO_NO_LLEI=Proposició no de llei
+anotacio.annex.detalls.camp.ntiTipusDocument.ESQUEMA=Esmena
+anotacio.annex.detalls.camp.ntiTipusDocument.PROPOSTA_RESOLUCIO=Proposta de resolució
+anotacio.annex.detalls.camp.ntiTipusDocument.COMPAREIXENSA=Compareixença
+anotacio.annex.detalls.camp.ntiTipusDocument.SOLICITUD_INFORMACIO=Sol·licitud d'informació
+anotacio.annex.detalls.camp.ntiTipusDocument.ESCRIT=Escrit
+anotacio.annex.detalls.camp.ntiTipusDocument.INICIATIVA__LEGISLATIVA=Iniciativa legislativa
+anotacio.annex.detalls.camp.ntiTipusDocument.PETICIO=Petició
+
+
 anotacio.annex.detalls.camp.sicresTipusDocument.FORMULARI=Formulari
 anotacio.annex.detalls.camp.sicresTipusDocument.ADJUNT=Document adjunt al formulari
 anotacio.annex.detalls.camp.sicresTipusDocument.TECNIC_INTERN=Fitxern tècnic intern
@@ -2468,6 +2489,27 @@ nti.document.tipo.documental.COMUNICACIO_CIUTADA=Comunicació ciutadà
 nti.document.tipo.documental.FACTURA=Factura
 nti.document.tipo.documental.ALTRES_INCAUTATS=Altres incautats
 nti.document.tipo.documental.ALTRES=Altres
+nti.document.tipo.documental.LLEI=Llei
+nti.document.tipo.documental.MOCIO=Moció
+nti.document.tipo.documental.INSTRUCCIO=Instrucció
+nti.document.tipo.documental.CONVOCATORIA=Convocatòria
+nti.document.tipo.documental.ORDRE_DIA=Ordre del dia
+nti.document.tipo.documental.INFORME_PONENCIA=Informe de ponència
+nti.document.tipo.documental.DICTAMEN_COMISSIO=Dictamen de comissió
+nti.document.tipo.documental.INICIATIVA_LEGISLATIVA=Iniciativa legislativa
+nti.document.tipo.documental.PREGUNTA=Pregunta
+nti.document.tipo.documental.INTERPELACIO=Interpel·lació
+nti.document.tipo.documental.RESPOSTA=Resposta
+nti.document.tipo.documental.PROPOSICIO_NO_LLEI=Proposició no de llei
+nti.document.tipo.documental.ESQUEMA=Esmena
+nti.document.tipo.documental.PROPOSTA_RESOLUCIO=Proposta de resolució
+nti.document.tipo.documental.COMPAREIXENSA=Compareixença
+nti.document.tipo.documental.SOLICITUD_INFORMACIO=Sol·licitud d'informació
+nti.document.tipo.documental.ESCRIT=Escrit
+nti.document.tipo.documental.INICIATIVA__LEGISLATIVA=Iniciativa legislativa
+nti.document.tipo.documental.PETICIO=Petició
+
+
 
 nti.document.format.GML=GML
 nti.document.format.WFS=WFS
