--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -359,6 +359,8 @@ expedient.document.arxiu.error.uuidnoexistent=El document no té UUID d'Arxiu
 expedient.document.arxiu.error.uuidnoexistent.info=S'ha detectat que l'expedient està integrat a l'Arxiu però el document no té UUID d'Arxiu i per tant no està guardat a l'arxiu. Podeu provar d'incorporar-lo per guardar-lo a l'Arxiu.
 expedient.document.arxiu.migrar.arxiu=Acció per migrar el document cap a l'Arxiu i incorporar-lo a l'expedient.
 expedient.document.arxiu.migrar.success=Document incorporat correctament a l'Axiu
+expedient.document.arxiu.desar.expedient=Primer cal guardar expedient en arxiu
+expedient.document.arxiu.desar=Guardar en arxiu
 expedient.document.form.camp.generar.plantilla=Generar des de plantilla
 expedient.document.form.camp.generar.plantilla.info=Genera el document plantilla amb la informació de l'expedient i l'adjunta com a contingut. ATENCIÓ: Les plantilles normalment es generen amb les variables de les tasques, si es genera manualment podria no disposar de totes les variables necessàries a l'expedient.
 expedient.document.form.camp.generar.descarregar=Generar el document plantilla i descarregar-lo
