#1620 Flag per evitar la generació des de plantilla per certs documents definits

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1197,6 +1197,8 @@ expedient.tipus.document.form.camp.notificable=Notificable
 expedient.tipus.document.form.camp.arxiu=Arxiu
 expedient.tipus.document.form.camp.codi_doc=Codi del document pel portasignatures
 expedient.tipus.document.form.camp.adj_auto=Adjuntar automàticament al generar
+expedient.tipus.document.form.camp.generar.nomes.tasca=Generar només des de tasca
+expedient.tipus.document.form.camp.generar.nomes.tasca.info=Flag per permetre generar el document tipus plantilla des de la tasca, no es podrà generar des de la gestió de documents
 expedient.tipus.document.form.camp.camp_data=Camp de la data
 expedient.tipus.document.form.camp.camp_data.buit=Seleccioni un camp
 expedient.tipus.document.form.camp.gen_ext=Extensió de sortida al generar
