#1611 Validar si un usuari té permisos de gestió de documentació abans de notificar

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -417,7 +417,7 @@ notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu a
 notificacio.form.camp.idioma=Idioma
 
 expedient.document.notificar.validacio.no.notificable=Per restriccions del NOTIB només es poden notificar documents de tipus .ZIP o convertibles a PDF ({0})
-
+expedient.document.notificar.validacio.no.permisos=L'usuari no permís de gestió per notificar documents
 expedient.document.verificar.csv.error=S''ha produït un error no controlat consultant el detall del document per obtenir el CSV de l''Arxiu: {0} : {1}
 
 expedient.tramitacio.massiva=Tramitació massiva
