#1627 Helium sense WF  - Pantalla dades

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -427,6 +427,7 @@ expedient.document.descarregar=Descarregar document
 expedient.document.descarregar.zip=Descarregar la documentació com un arxiu comprimit .zip
 expedient.document.descarregar.zip.error=S''ha produït un error generant i descarregant el .zip amb la documentació: {0}
 expedient.document.filtrar=Filtrar documents
+expedient.document.mostrar.tots=Mostrar tots
 expedient.document.filtrar.trobats=documents trobats
 expedient.document.ordenar=Selecció de l'ordenació de documents
 expedient.document.ordenar.default=Per codi i títol d'annex
@@ -623,6 +624,9 @@ document.validacio.convertible.error=L''arxiu ha de ser convertible a PDF per ev
 document.validacio.codiCustodia.error=Per poder guardar la firma a custòdia és necessari un codi de custòdia associat al document
 
 expedient.dada.mostrar.ocultes=Mostrar ocultes
+expedient.dada.mostrar.pendents=Mostrar pendents
+expedient.dada.mostrar.totes=Mostrar totes
+expedient.dada.filtrar=Filtrar dades
 expedient.dada.borrar.error=S'ha produït un error al intentar esborrar la dada de l'expedient
 expedient.dada.modificar.error=S'ha produït un error al intentar modificar la dada de l'expedient
 expedient.nova.data.camp.variable.buit=El camp variable no pot estar buit
