#1627 Helium sense WF
- Log d'estats

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -524,6 +524,7 @@ expedient.info.pipella.interessats=Interessats
 expedient.info.pipella.terminis=Terminis
 expedient.info.pipella.notificacions=Notificacions
 expedient.info.pipella.registre=Registre
+expedient.info.pipella.estats=Estats
 expedient.info.pipella.cronograma=Cronograma
 expedient.info.pipella.anotacions=Anotacions
 expedient.info.confirm.dada.esborrar=Estau segur que voleu esborrar aquesta dada de l'expedient?
@@ -680,6 +681,11 @@ expedient.tasca.temps.execucio=Temps execució
 
 expedient.log.expedient.cap=Aquest expedient no conté cap log
 expedient.log.proces.cap=Aquest proces no conté cap log
+
+expedient.estat.data=Data
+expedient.estat.estat=Estat
+expedient.estat.responsable=Responsable
+
 
 expedient.notificacio.expedient.cap=Aquest expedient no conté cap notificació
 
