--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -271,6 +271,7 @@ expedient.log.accio.EXPEDIENT_DESFINALITZAR=Desfinalitzar expedient
 expedient.log.accio.EXPEDIENT_FINALITZAR=Finalitzar expedient
 expedient.log.accio.EXPEDIENT_MIGRAR_ARXIU=Migrar expedient a l'arxiu
 expedient.log.accio.ANOTACIO_RELACIONAR=Relacionar anotació a l'expedient
+expedient.log.accio.EXPEDIENT_ESTAT_CANVIAR=Canvi d'estat de l'expedient
 expedient.log.objecte=Element
 expedient.log.objecte.TASCA=Tasca
 expedient.log.objecte.PROCES=Procés
