#1638 Poder descarregar les versions anteriors d'un document guardat a l'Arxiu. Reoberta

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -591,6 +591,7 @@ document.metadades.nti.iddoc.origen.validacio.copia=Aquest camp és obligatori si
 document.metadades.nti.tipo.firma=Tipus de firma
 document.metadades.nti.csv=CSV
 document.metadades.nti.defgen.csv=Normativa de generació del CSV
+document.metadades.nti.darrera.versio=L'Arxiu només permet obtenir la darrera versió dels documents per expedients tancats
 
 document.validacio.convertible.error=L''arxiu ha de ser convertible a PDF per evitar problemes amb l''Arxiu
 document.validacio.codiCustodia.error=Per poder guardar la firma a custòdia és necessari un codi de custòdia associat al document
