#1627 Helium sense WF
 - Correccions i proves amb documents
 - Revisar firma al portafirmes

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -380,6 +380,14 @@ expedient.document.camp.firma.responsable.nif=Nif del responsable
 expedient.document.camp.firma.responsable.data=Data de la signatura
 expedient.document.camp.firma.emissor.certificat=Emissor del certificat
 
+expedient.document.detall.pipella.registre=Registre
+expedient.document.detall.pipella.signatura=Signatura
+expedient.document.detall.pipella.portasignatura=Portasignatura
+expedient.document.detall.pipella.notificacions=Notificacions
+expedient.document.detall.pipella.arxiu=Arxiu
+expedient.document.detall.pipella.anotacions=Anotació
+
+
 expedient.document.notificar.form.camp.interessats.variable=Interessats
 expedient.document.notificar.form.camp.interessats.placeholder=Escolliu els interessats
 expedient.document.notificar.form.camp.destinatari=Destinatari
