#1627 Helium sense WF  - Afegir handlers

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1373,6 +1373,7 @@ expedient.tipus.accio.llistat.accio.esborrar=Esborrar
 expedient.tipus.accio.llistat.accio.esborrar.confirmacio=Estau segur que voleu esborrar aquesta acció?
 expedient.tipus.accio.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar la acció del tipus d'expedient
 expedient.tipus.accio.llistat.accio.esborrar.correcte=La acció s'ha esborrat correctament
+expedient.tipus.accio.llistat.accio.desplegar.handlers=Desplegar handlers
 
 expedient.tipus.accio.form.titol.nova=Crear una nova acció
 expedient.tipus.accio.form.titol.modificar=Modificar l'acció
@@ -1402,6 +1403,12 @@ expedient.tipus.accio.validacio = Errors de validació
 expedient.tipus.accio.validacio.accio.no.existeix=L''acció no existeix a la darrera versió de la definició de procés
 expedient.tipus.accio.validacio.predefinit.classe.no.existeix=La classe {0} no es troba entre els handlers predefinits
 expedient.tipus.accio.validacio.predefinit.parametres.obligatoris=El handler té els següents paràmetres obligatoris que no han estat informats: {0}
+
+expedient.tipus.accio.desplegar.form.titol=Desplegament de handlers .jar dins el tipus d''expedient "{0} - {1}"
+expedient.tipus.accio.desplegar.flow=El tipus d'expedient no és per estats.
+expedient.tipus.accio.desplegar.form.success=El desplegament de la definició de procés s'ha realitzat correctament.
+expedient.tipus.accio.desplegar.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
+expedient.tipus.accio.desplegar.error.lectura=Error llegint l'arxiu a desplegar
 
 ## MANTENIMENT D'ENUMERACIONS ##
 enumeracio.llistat.titol=Enumeracions
@@ -1992,6 +1999,7 @@ definicio.proces.actualitzar.error.arxiuNom=Arxiu amb extensió no suportada "{0}
 definicio.proces.actualitzar.error.parse=El contingut del fitxer no s'ha pogut processar
 definicio.proces.actualitzar.error.jbpmKey.expedientTipus=No hi ha cap definició de procés al tipus d''expedient amb la clau "{0}" per actualitzar
 definicio.proces.actualitzar.error.jbpmKey.global=No hi ha cap definició de procés a l''entorn amb la clau "{0}" per actualitzar
+definicio.proces.actualitzar.handlers.error.definicio=Error obtenint la definició del tipus d'expedient. Contacti amb l'administrador.
 
 definicio.proces.desplegar.validacio.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
 definicio.proces.desplegar.validacio.error.lectura=Error llegint l'arxiu a importar
