#1627 Helium sense WF. Nova funcionalitat per descarregar les variables de l’expedient.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -322,6 +322,7 @@ expedient.llistat.accio.massiva=Acció massiva
 expedient.llistat.tramitacio.massiva=Tramitació massiva
 expedient.llistat.accio.seleccio.tots=Seleccionar tots els expedients
 expedient.llistat.accio.seleccio.netejar=Netejar selecció
+expedient.llistat.accio.descarregar=Descarregar dades
 expedient.llistat.accio.nou=Nou expedient
 expedient.llistat.confirmacio.anular=Estau segur que voleu anular aquest expedient?
 expedient.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest expedient? Aquesta acció no es pot tornar enrera una vegada executada.
@@ -330,7 +331,7 @@ expedient.llistat.tasques.pendents.ocultar=Ocultar tasques pendents
 expedient.llistat.tasques.pendents.nohiha=Aquest expedient no te cap tasca pendent per a l'usuari actual
 expedient.llistat.accio.reassignar.expedient.tipus.buit=No s'ha seleccionat cap tipus d'expedient per a poder reassignar
 expedient.llistat.accio.reassignar.sense.permis=No es té permís de reassignació pel tipus d'expedient seleccionat
-
+expedient.llistat.exportacio.error=S''ha produït un error al generar el fitxer amb les dades dels expedients: {0}
 expedient.llistat.consulta_avanzada=Consulta avançada
 
 expedient.llistat.document.confirm_esborrar=Estau segur que voleu esborrar aquest document?
