#1627 Helium sense WF. Nova funcionalitat per descarregar les variables de l’expedient.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -646,6 +646,8 @@ expedient.dada.mostrar.totes=Mostrar totes
 expedient.dada.filtrar=Filtrar dades
 expedient.dada.borrar.error=S'ha produït un error al intentar esborrar la dada de l'expedient
 expedient.dada.modificar.error=S'ha produït un error al intentar modificar la dada de l'expedient
+expedient.dada.descarregar=Descarregar excel amb totes les dades de l'expedient
+expedient.dada.descarregar.error=S''ha produït un error generant i descarregant l''excel amb les dades de l''expedient: {0}
 expedient.nova.data.camp.variable.buit=El camp variable no pot estar buit
 
 expedient.termini.confirmar.iniciar=Estau segur que voleu iniciar aquest termini?
