--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -4,6 +4,7 @@ decorator.rol.disseny=Dissenyador
 decorator.rol.usuari=Usuari
 decorator.menu.expedients=Expedients
 decorator.menu.anotacions=Anotacions
+decorator.menu.avisos=Avisos
 decorator.menu.tasques=Tasques
 decorator.menu.informes=Informes
 decorator.menu.consultes=Consultes
@@ -31,6 +32,7 @@ error.tipus.integracions.no=Sense errors d'integracions
 error.permis.disseny.entorn=No disposa de permisos per dissenyar l'entorn
 error.permis.administracio.entorn=No disposa de permisos per administrar l'entorn
 error.signatura=Error durant la signatura: {0}
+error.permis.disseny.avis=No disposa de permisos per dissenyar l'avís
 
 entorn.llistat.titol=Entorns
 entorn.llistat.columna.codi=Codi
@@ -66,6 +68,26 @@ entorn.controller.modificat=L'entorn s'ha modificat correctament
 entorn.controller.esborrat=L'entorn s'ha esborrat correctament
 entorn.controller.permis.actualitzat=S'ha actualitzat el permis per a l'entorn
 
+avis.llistat.titol=Avisos
+avis.form.titol.nou=Crear avís
+avis.form.titol.modificar=Modificar avís
+avis.assumpte= Assumpte
+avis.missatge= Missatge
+avis.dataInici= Data inicial
+avis.dataFi= Data final
+avis.horaInici= Interval hora inicial
+avis.horaFi= Interval hora final
+avis.llistat.accio.permisos=Permisos
+avis.llistat.confirmacio.esborrar=Esteu segur que voleu esborrar aquest avís?
+avis.hora.minuts=hh:mm
+avis.avisNivell=Avís nivell
+avis.controller.creat=L'avís s'ha creat correctament
+avis.controller.modificat=L'avís s'ha creat modificat
+avis.list.columna.activa=Actiu
+avis.boto.activar=Activar
+avis.boto.desactivar=Desactivar
+avis.controller.desactivat.ok=L'avís s'ha desactivat correctament
+avis.controller.activat.ok=L'avís s'ha activat correctament
 
 interessat.llistat.accio.nou=Nou interessat
 interessat.llistat.titol=Interessat
