--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -34,6 +34,10 @@ error.area.nou.membre.codi.persona.repetit=El membre ja té un càrrec dins l'àrea
 error.area.nou.membre.carrec.inexistent=El càrrec no existeix
 error.area.pare.no.ella.mateixa=L''àrea no pot ser pare d''ella mateixa.
 
+error.avis.codi.repetit=Ja existeix una altra avís amb aquest codi
+error.avis.validacio=Hi ha errors de validació
+error.avis.validacio.hores=El format de les hores i minuts és incorrecte 
+
 error.carrec.area.inexistent=Àrea inexistent
 error.carrec.codi.repetit=Ja existeix una altre càrrec amb aquest codi
 error.carrec.codi.buit=El codi ha de tenir algun valor
