#1627 HELIUM sense WF
- Logs detallats

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -293,6 +293,7 @@ expedient.log.accions.llistat=Accions de la tasca
 expedient.lot.token=Token
 expedient.log.tipus.detall=Veure registre detallat 
 expedient.log.tipus.tasca=Veure registre per tasques
+expedient.log.tipus.estat=Veure canvis d'estats
 expedient.tasca.reassignar=Reassignar tasca
 expedient.tasca.expresio_assignacio=Expressió d'assignació
 expedient.relacionar.ok=L'expedient s'ha relacionat correctament
