#1627 HELIUM sense WF
Correccions:
- Comrpovar variables i documents obligatosi

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -547,7 +547,9 @@ expedient.info.estat.retrocedir=Retrocedir a l''estat <b>"{0}"</b>
 expedient.info.estat.avancar=Avançar a l''estat <b>"{0}"</b>
 
 expedient.info.estat.canviar.correcte=S'ha canviat correctament l'estat a l'expedient
-expedient.info.estat.canviar.error=Hi ha hagut un error canviant l'estat a l'expedient: {0}
+expedient.info.estat.canviar.error=Hi ha hagut un error canviant l''estat a l''expedient: {0}
+expedient.info.estat.canviar.dades.obligatories=Hi ha {0} dades obligatòries per l''estat actual que no han estat informades: {1}
+expedient.info.estat.canviar.documents.obligatoris=Hi ha {0} documents obligatoris per l''estat actual que no han estat informats: {1}
 
 
 expedient.metadades.nti.titol.nti=Metadades NTI
