#1650 Tractar les anotacions pendents de consultar i processar en diferents threads

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1981,7 +1981,7 @@ monitor.integracio.info.parametres=Paràmetres de la petició
 
 # Anotacions provinents de Distribucio
 anotacio.llistat.titol=Consulta d'anotacions de Distribució
-
+anotacio.llistat.numero.threads.consultats=Fils de consulta:
 anotacio.llistat.filtre.camp.codiProcediment=Codi Procediment
 anotacio.llistat.filtre.camp.codiAssumpte=Codi Assumpte
 anotacio.llistat.filtre.camp.numeroExpedient=Número Expedient
