--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -433,6 +433,14 @@ expedient.document.ordenar.titol=Per títol
 
 expedient.document.invalid=Aquest annex està marcat com a invàlid: {0}
 
+
+expedient.document.firmaPassarela.titol.adjunt=Firma des del navegador del document adjunt "{0}"
+expedient.document.firmaPassarela.titol.document=Firma des del navegador del document "{0}"
+expedient.document.firmaPassarela.camp.motiu=Motiu
+expedient.document.firmaPassarela.camp.motiu.default=Tramitació de l''expedient [{0}]
+expedient.document.firmaPassarela.boto.firmar=Iniciar procés de firma
+expedient.document.firmaPassarela.validacio.custodia.codi=Es cancel·la la firma perquè no es podrà guardar el document firmat si el document no té codi de Custòdia ni integració amb l'Arxiu digital.
+
 notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
 notificacio.form.camp.data.caducitat.comment=El valor mínim és un dia després de l'enviament. A la data de caducitat se li sumaran els dies definits dins del NOTIB pel procediment
 notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu abans de ser enviada via DEH o correu postal
