#1651 Marcar l'anotació pendent que s'estigui processant i documentar els diferents estats en què es troben les anotacions

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -759,6 +759,7 @@ expedient.anotacio.llistat.columna.dataProcessament=Processada
 expedient.anotacio.llistat.error.annexos=L'anotació conté error amb alguns annexos que poden no haver esat incorporats a l'arxiu.
 expedient.anotacio.llistat.annexos.invalids=L'anotació conté annexos marcats com a invàlids que s'haurien de revisar.
 expedient.anotacio.llistat.annexos.esborranys=L'anotació conté annexos en estat d'esborrany que es podrien perdre si es tanca l'expedient a l'Arxiu.
+expedient.anotacio.llistat.processant=L'anotació s'està processant automàticament.
 expedient.anotacio.llistat.processar.mapeig=Processar mapeig
 expedient.anotacio.llistat.processar.mapeig.ok=L'anotació s'ha reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.ko=No s'ha pogut reprocessar l'anotació.
@@ -2001,9 +2002,22 @@ anotacio.llistat.columna.expedientTipus=Tipus d'expedient
 anotacio.llistat.columna.expedient=Expedient
 anotacio.llistat.columna.dataRecepcio=Rebuda
 anotacio.llistat.columna.estat=Estat
+anotacio.llistat.columna.estat.llegenda=Llegenda dels estats del procés de les anotacions de registre
 anotacio.llistat.columna.dataProcessament=Processada
 anotacio.llistat.columna.expedientTipus=Expedient Tipus
 anotacio.llistat.columna.expedient=Expedient
+
+anotacio.proces.estat.enum.PENDENT=Pendent
+anotacio.proces.estat.enum.PROCESSADA=Processada
+anotacio.proces.estat.enum.COMUNICADA=Comunicada
+anotacio.proces.estat.enum.REBUTJADA=Rebutjada
+anotacio.proces.estat.enum.ERROR_PROCESSANT=Error
+
+anotacio.proces.estat.enum.PENDENT.info=Anotació pendent de processar o rebutjar
+anotacio.proces.estat.enum.PROCESSADA.info=Anotació processada i relacionada amb un nou expedient no un expedient existent
+anotacio.proces.estat.enum.COMUNICADA.info=Anotació comunicada al backoffice
+anotacio.proces.estat.enum.REBUTJADA.info=Anotació rebutjada
+anotacio.proces.estat.enum.ERROR_PROCESSANT.info=Anotació amb error processant
 
 anotacio.llistat.accio.expedient=Expedient
 anotacio.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta petició petició d'anotació? Aquesta acció no es pot tornar enrera una vegada executada.
