--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2011,13 +2011,13 @@ anotacio.proces.estat.enum.PENDENT=Pendent
 anotacio.proces.estat.enum.PROCESSADA=Processada
 anotacio.proces.estat.enum.COMUNICADA=Comunicada
 anotacio.proces.estat.enum.REBUTJADA=Rebutjada
-anotacio.proces.estat.enum.ERROR_PROCESSANT=Error
+anotacio.proces.estat.enum.ERROR_PROCESSANT=Error processant
 
-anotacio.proces.estat.enum.PENDENT.info=Anotació pendent de processar o rebutjar
-anotacio.proces.estat.enum.PROCESSADA.info=Anotació processada i relacionada amb un nou expedient no un expedient existent
-anotacio.proces.estat.enum.COMUNICADA.info=Anotació comunicada al backoffice
-anotacio.proces.estat.enum.REBUTJADA.info=Anotació rebutjada
-anotacio.proces.estat.enum.ERROR_PROCESSANT.info=Anotació amb error processant
+anotacio.proces.estat.enum.PENDENT.info=L'anotació ha estat consultada per Helium. Segons el codi de procediment, assumpte i número d'expedient de l'anotació se cercarà un tipus d'expedient integrat amb Distribucio. Si el tipus d'expedient està configurat per processar automàticament llavors es crearà un expedient o s'incorporarà a un expedient. Si el tipus d'expedient no té processament automàtic l'anotació quedarà pendent de que un usuari amb permís de relacionar processi l'anotació. Les anotacions en estat pendent que s'estan processant automàticament estan marcades amb una icona <span class="fa fa-cog"></span>. Helium marca aquestes anotacions com a rebudes al backoffice a Distribucio.
+anotacio.proces.estat.enum.PROCESSADA.info=L'anotació s'ha processat correctament i s'ha creat un expedient o s'ha incorporat a un expedient existent de forma automàtica o manual. Helium marca aquestes anotacions com a processades pel backoffice a Distribucio.
+anotacio.proces.estat.enum.COMUNICADA.info=L'anotació ha estat comunicada a Helium per part de Distribucio i està pendent de que Helium en consulti els detalls. Aquestes anotacons apareixen com a comunicades a Distribucio.
+anotacio.proces.estat.enum.REBUTJADA.info=Les anotacions rebutjades són les que s'han rebutjat a Helium manualment o automàticament perquè no hi ha cap tipus d'expedient configurat que coincideixi amb el codi de procediment o assumpte. Helium marca aquestes anotacions com a rebutjades pel backoffice a Distribucio i especifica un motiu.
+anotacio.proces.estat.enum.ERROR_PROCESSANT.info=Les anotacions amb error de processament són les anotacions per les quals s'ha produït un error innesperat en el seu processament manual o automàtic. Helium marca aquestes anotacions com a processades amb error a Distribucio.
 
 anotacio.llistat.accio.expedient=Expedient
 anotacio.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta petició petició d'anotació? Aquesta acció no es pot tornar enrera una vegada executada.
