#1654 Accions sobre anotacions

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -373,6 +373,7 @@ error.no.exp.selec=No ha seleccionat cap expedient
 error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap document annexat per modificar
 error.no.exp.selec.diferenttipus=Els expedients seleccionats no poden ser de diferents tipus d'expedient
 error.no.tasc.selec=No ha seleccionat cap tasca
+error.no.anotacio.selec=No ha seleccionat cap anotació
 error.no.exp.execmasiv=No s'ha trobat cap expedient que es pugui executar massivament
 
 error.reindexar.expedient=Error al reindexar expedient
