--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1992,6 +1992,10 @@ anotacio.llistat.filtre.camp.dataInicial=Data inicial
 anotacio.llistat.filtre.camp.dataFinal=Data final
 anotacio.llistat.filtre.camp.expedientTipus=Expedient tipus
 anotacio.llistat.filtre.camp.estat=Estat
+anotacio.llistat.reintentar.consulta=Reintentar consulta
+anotacio.llistat.reintentar.processar=Reintentar processar
+anotacio.llistat.seleccionats.reintentats.success=S''han reintat les consultes correctament {0} de les {1} anotacions seleccionades
+anotacio.llistat.accio.massiva.no.seleccio=No hi ha cap anotació seleccionada
 
 anotacio.llistat.columna.data=Data
 anotacio.llistat.columna.identificador=Número registre
