Correcions Helium sense WF
- No seleccionar definició de procés a l'inici de l'expedient
- No permetre canviar el tipus de l'expedient tipus
- Permetre canviar el nom a les regles dels estats
- Amagar la columna "Definició de procés" en el manteniment d'accions
- Esborrar estat amb accions relacionades
- Importar estats esborrant valors anteriors
- Modal per editar dades més gran.
- Event tancar modal en els documents.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1642,11 +1642,12 @@ expedient.tipus.estat.importar.form.titol.modificar=Modificar estat
 expedient.tipus.estat.importar.form.estat.codi=Codi
 expedient.tipus.estat.importar.form.estat.nom=Nom
 expedient.tipus.estat.importar.controller.validacio.multipartFile.buit=L'arxiu a importar no pot estar buit
-expedient.tipus.estat.importar.controller.success=Importació finalitzada amb {0} insercions i {1} actualitzacions
+expedient.tipus.estat.importar.controller.success=Importació finalitzada amb {0} insercions, {1} actualitzacions i {2} esborrats.
 expedient.tipus.estat.importar.controller.error=Error durant la importació de dades: {0}
 expedient.tipus.estat.importar.controller.error.codi=No s''ha pogut importar l''estat "{0}". El codi no pot començar per majúscula i minúscula ni contenir espais o punts.
-expedient.tipus.estat.importar.controller.avis.estat.accio.entrada=No s''ha trobat l''acció \"{0} - {1\}" per l''entrada de l''estat \"{0} - {1}\"
-expedient.tipus.estat.importar.controller.avis.estat.accio.sortida=No s''ha trobat l''acció \"{0} - {1\}" per la sortida de l''estat \"{0} - {1}\"
+expedient.tipus.estat.importar.controller.avis.estat.accio.entrada=No s''ha trobat l''acció \"{0} - {1}\" per l''entrada de l''estat \"{2} - {3}\"
+expedient.tipus.estat.importar.controller.avis.estat.accio.sortida=No s''ha trobat l''acció \"{0} - {1}\" per la sortida de l''estat \"{2} - {3}\"
+expedient.tipus.estat.importar.controller.error.estat.antic.esborrar=Error esborrant l''estat antic \"{0} - {1}\": {2}
 
 expedient.tipus.estat.exportar.controller.success=Exportació finalitzada correctament
 expedient.tipus.estat.exportar.controller.error=Error durant la exportació de dades: {0}
