Correccions Helium sense WF
- Botó tancar de les modals
- Recarregar detall documents quan hi ha errors.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -403,6 +403,7 @@ expedient.document.camp.firma.responsable.nif=Nif del responsable
 expedient.document.camp.firma.responsable.data=Data de la signatura
 expedient.document.camp.firma.emissor.certificat=Emissor del certificat
 
+expedient.document.detall.consulta.error=Error no controlat consultant el detall del document: {0}
 expedient.document.detall.pipella.registre=Registre
 expedient.document.detall.pipella.signatura=Signatura
 expedient.document.detall.pipella.portasignatura=Portasignatura
@@ -2266,7 +2267,7 @@ anotacio.detalls.info.errors=El processament automàtic d'aquesta anotació ha pro
 anotacio.detalls.accio.reintentar=Reintentar processament
 
 anotacio.detalls.errorNotifacio=Error al notificar distribucio del processament correcte
-anotacio.detalls.annex.accio.reintentar
+anotacio.detalls.annex.accio.reintentar=Reintentar
 
 
 anotacio.interessat.detalls.camp.emailHabilitat=Correu electrònic habilitat
@@ -2524,6 +2525,7 @@ comu.processant=Processant
 comu.boto.detalls=Detalls
 comu.boto.acceptar=Acceptar
 comu.boto.rebutjar=Rebutjar
+comu.boto.reintentar=Reintentar
 comu.darrera.actualitzacio=Darrera actualització
 
 comu.true=Sí
