#1670 Reintentar a nivell d'anotació la incorporació de tots els annexos a la vegada i contemplar la seva execució massiva

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -770,8 +770,11 @@ expedient.anotacio.llistat.annexos.invalids=L'anotació conté annexos marcats com
 expedient.anotacio.llistat.annexos.esborranys=L'anotació conté annexos en estat d'esborrany que es podrien perdre si es tanca l'expedient a l'Arxiu.
 expedient.anotacio.llistat.processant=L'anotació s'està processant automàticament.
 expedient.anotacio.llistat.processar.mapeig=Processar mapeig
+expedient.anotacio.llistat.processar.nomes.annexos=Processar només annexos
 expedient.anotacio.llistat.processar.mapeig.ok=L'anotació s'ha reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.ko=No s'ha pogut reprocessar l'anotació.
+expedient.anotacio.llistat.processar.nomes.annexos.ko=No s'ha pogut reprocessar els annexos de l'anotació.
+expedient.anotacio.llistat.processar.nomes.annexos.ok=Els annexos de l'anotació s'han reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.permisos=L'usuari ha de tenir el permís de relacionar per reprocessar el mapeig a l'anotació.
 
 expedient.lucene.titol=Dades indexades a lucene per l''expedient {0}
