#1628 Poder descarregar l'annex original des del detall de l'anotació

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2173,6 +2173,8 @@ anotacio.annex.detalls.camp.firmaDetalls.nom=Nom
 anotacio.annex.detalls.camp.firmaDetalls.emissor=Emissor
 anotacio.annex.detalls.camp.fitxer=Fitxer
 anotacio.annex.detalls.camp.fitxer.descarregar=Descarregar fitxer
+anotacio.annex.detalls.camp.fitxer.descarregar.original=Descàrrega del document original
+anotacio.annex.detalls.camp.fitxer.descarregar.imprimible=Descàrrega de la versió imprimible
 anotacio.annex.detalls.camp.estat=Estat
 anotacio.annex.detalls.camp.estat.arxiu=Estat a l'Arxiu
 anotacio.annex.detalls.camp.estat.arxiu.esborrany.avis=Aquest annex s'ha distribuït amb estat d'esborrany per poder-se distribuir i podria perdre's si no es firma abans de tancar l'expedient a l'Arxiu.
