#1670 Reintentar a nivell d'anotació la incorporació de tots els annexos a la vegada i contemplar la seva execució massiva

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -365,6 +365,7 @@ expedient.massiva.altaMassiva=Alta massiva per CSV d''expedients ''{0}''
 expedient.massiva.anotacions.esborrar=Esborrar anotacions
 expedient.massiva.anotacions.reprocessar.mapeig=Reprocessar mapeig
 expedient.massiva.anotacions.reintentar.processament=Reintentar processament
+expedient.massiva.anotacions.reintentar.processament.nomes.annexos=Reintentar traspàs annexos
 expedient.massiva.anotacions.reintentar.consulta=Reintentar consulta
 
 execucions.massives.no=No s''ha programat cap acció massiva
