--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -770,7 +770,7 @@ expedient.anotacio.llistat.annexos.invalids=L'anotació conté annexos marcats com
 expedient.anotacio.llistat.annexos.esborranys=L'anotació conté annexos en estat d'esborrany que es podrien perdre si es tanca l'expedient a l'Arxiu.
 expedient.anotacio.llistat.processant=L'anotació s'està processant automàticament.
 expedient.anotacio.llistat.processar.mapeig=Processar mapeig
-expedient.anotacio.llistat.processar.nomes.annexos=Processar només annexos
+expedient.anotacio.llistat.processar.nomes.annexos=Processar traspàs annexos
 expedient.anotacio.llistat.processar.mapeig.ok=L'anotació s'ha reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.ko=No s'ha pogut reprocessar l'anotació.
 expedient.anotacio.llistat.processar.nomes.annexos.ko=No s'ha pogut reprocessar els annexos de l'anotació.
@@ -2006,6 +2006,7 @@ anotacio.llistat.filtre.camp.expedientTipus=Expedient tipus
 anotacio.llistat.filtre.camp.estat=Estat
 anotacio.llistat.reintentar.consulta=Reintentar consulta
 anotacio.llistat.reintentar.processament=Reintentar processament
+anotacio.llistat.reintentar.processament.nomes.annexos=Reintentar traspàs annexos
 anotacio.llistat.reintentar.mapeig=Reintentar mapeig
 anotacio.llistat.esborrar.anotacions=Esborrar anotacions
 anotacio.llistat.seleccionats.reintentats.success=S''han reintat les consultes correctament {0} de les {1} anotacions seleccionades
@@ -2018,6 +2019,8 @@ anotacio.llistat.accio.massiva.info.reintentar.mapeig.success=Tasca de reintenta
 anotacio.llistat.accio.massiva.info.reintentar.mapeig.error=Error programant la tasca de reintentar mapeig d'anotacions: {0}
 anotacio.llistat.accio.massiva.info.esborrar.anotacions.success=Tasca d'esborrar anotacions programada correctament
 anotacio.llistat.accio.massiva.info.esborrar.anotacions.error=Error programant la tasca d'esborrar anotacions: {0}
+anotacio.llistat.accio.massiva.info.reintentar.processament.nomes.annexos.success=Tasca de reintentar processament d'annexos programada correctament
+anotacio.llistat.accio.massiva.info.reintentar.processament.nomes.annexos.error=Error programant la tasca de reintentar processament d'annexos: {0}
 anotacio.llistat.accio.massiva.titol=Anotació
 
 anotacio.llistat.columna.data=Data
